# legis

./: .gitignore  .mcp.json  AUDIT-2026-06-04-comprehensive-readonly.md  AUDIT-2026-06-04-readonly.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  loomweave.yaml  pyproject.toml  wardline.yaml
.agents/skills/loomweave-workflow/: .fingerprint  SKILL.md
.claude/: settings.json
.claude/skills/filigree-workflow/: SKILL.md
.claude/skills/loomweave-workflow/: .fingerprint  SKILL.md
.github/workflows/: ci.yml  deploy-site.yml  loomweave-conformance.yml  override-rate.yml  publish.yml  release.yml
.loomweave/: .gitignore  config.json  instance_id
.weft/filigree/: .gitignore  config.json  federation_token
docs/: CNAME  release-1.0-pre-ship-review.md  release-1.0-risk-audit.md
docs/arch-analysis-2026-06-06-0158/: 00-coordination.md  01-discovery-findings.md  02-subsystem-catalog.md  03-diagrams.md  04-final-report.md  05-quality-assessment.md  06-architect-handover.md
docs/arch-analysis-2026-06-06-0158/temp/: AUDIT-readonly.md  catalog-A-enforcement.md  catalog-B-policy.md  catalog-C-governance.md  catalog-D-service-api.md  catalog-E-frontends.md  catalog-F-integrations.md  validation-report.md
docs/design/: README.md  legis-charter.md
docs/design/adr/: 0001-stack-and-architecture.md  0002-complex-tier-governance-parameters.md  0003-filigree-binding-availability.md
docs/federation/: README.md  sei-conformance.md
docs/guide/: README.md  cli-reference.md  configuration.md  reading-legis-output.md
docs/reference/: mcp.md
docs/superpowers/plans/: 2026-06-01-legis-bootstrap.md  2026-06-01-legis-implementation-sprints.md  2026-06-01-legis-sprint-0-foundation.md  2026-06-01-legis-sprint-1-operating-picture.md  2026-06-02-legis-sprint-2-simple-tier.md  2026-06-02-legis-sprint-3-complex-tier.md  2026-06-02-legis-sprint-4-policy-grammar.md  2026-06-02-legis-sprint-5-sei-conformance.md  2026-06-02-legis-sprint-6-suite-combinations.md  2026-06-02-not-yets-track-1-protected-tier-integrity.md  2026-06-02-not-yets-track-2-signoff-binding-hardening.md  2026-06-02-not-yets-track-3-wardline-routing-breadth.md  2026-06-02-not-yets-track-4-policy-grammar.md  2026-06-02-not-yets-track-5-git-ci-surface.md  2026-06-03-legis-mcp-wp-m1-service-layer.md  2026-06-03-roadmap-gap-remediation.md  2026-06-04-legis-filigree-binding-signature-handoff.md  2026-06-04-legis-live-clarion-hmac-auth.md  2026-06-04-legis-mcp-full-agent-surface.md  2026-06-04-legis-mcp-wp-m2-registry-explain.md  2026-06-04-legis-mcp-wp-m3-vertical-slice.md  2026-06-04-legis-p0-agent-utility-remediation.md  2026-06-04-legis-sei-batch-backfill.md  2026-06-05-legis-deferred-followups-remediation.md  2026-06-05-legis-deferred-followups-remediation.review.json  2026-06-05-legis-home-closeout.md  (+2 more)
policy/: cells.toml
scripts/: check_coverage_floors.py
site/: .gitignore  astro.config.mjs  package-lock.json  package.json
site/public/: CNAME
site/scripts/: fetch-site-kit.mjs  sync-assets.mjs
src/legis/: __init__.py  canonical.py  cli.py  clock.py  config.py  doctor.py  hooks.py  install.py  mcp.py  provenance.py  weft_signing.py
tests/: conftest.py  test_canonical.py  test_ci_workflow.py  test_cli.py  test_cli_install.py  test_config.py  test_doctor.py  test_harness_defaults.py  test_hooks.py  test_install.py  test_weft_signing.py
tests/api/: test_auth.py  test_check_api.py  test_combinations_api.py  test_complex_api.py  test_git_api.py  test_health.py  test_override_api.py  test_policy_api.py  test_sei_api.py
tests/checks/: test_check_surface.py
tests/conformance/: test_live_clarion_oracle.py  test_live_loomweave_oracle.py  test_sei_oracle.py
tests/contract/: test_git_rename_feed_contract.py  test_git_renames_contract.py
tests/enforcement/: test_decay_sweep.py  test_engine_chill.py  test_engine_coached.py  test_engine_flag_flip.py  test_judge.py  test_judge_factory.py  test_llm_client.py  test_override_rate.py  test_protected_extensions.py  test_protected_override.py  test_protected_submit.py  test_regressions.py  test_signing.py  test_signoff.py  test_signoff_extensions.py  test_store_dependency.py  test_trail_verify.py  test_verdict_complex.py  test_verdict_parse.py  test_verdict_types.py
tests/filigree/: test_client.py
tests/git/: test_git_surface.py  test_pull_request_api.py  test_rename_feed.py
tests/governance/: test_binding_ledger.py  test_filigree_gate.py  test_gaps.py  test_sei_backfill.py  test_signoff_binding.py  test_signoff_binding_real_filigree.py  test_store_dependency.py
tests/identity/: test_clarion_client.py  test_entity_key.py  test_loomweave_client.py  test_resolver.py
tests/mcp/: test_output_schema_conformance.py  test_policy_cell_default.py  test_server.py
tests/policy/: test_boundary_scan.py  test_cells.py  test_decorator.py  test_evidence.py  test_exemptions.py  test_grammar.py  test_honesty_gate.py
tests/pulls/: test_pull_surface.py
tests/records/: test_override_record.py
tests/service/: test_errors.py  test_explain.py  test_governance.py  test_wardline.py
tests/store/: test_audit_store.py  test_batch_read_free_invariant.py  test_head_anchor.py
tests/wardline/: test_coached_routing.py  test_governor.py  test_ingest.py  test_policy.py
www/: README.md  colors_and_type.css  index.html  main.js  styles.css
(+78 files in other folders)
