[project]
name = "legis"
version = "1.0.0rc2"
description = "Legis — the git/CI + governance layer of the Weft suite"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "John Morrissey", email = "john@foundryside.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/foundryside-dev/legis"
Repository = "https://github.com/foundryside-dev/legis"
Issues = "https://github.com/foundryside-dev/legis/issues"

[project.scripts]
legis = "legis.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "mypy>=1.19",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "error",
    # Third-party: Starlette's TestClient warns about its bundled httpx usage.
    # Matched by message (category is StarletteDeprecationWarning, not DeprecationWarning).
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.mypy]
python_version = "3.12"
files = ["src/legis"]
show_error_codes = true
warn_unused_configs = true
